# tanks

./: .gitignore  CMakeLists.txt  CMakeSettings.json  cm_sound.h  cm_variable.cpp  cm_variable.h  g_button.cpp  g_client.cpp  g_main.cpp  g_main.h  g_menu.cpp  g_menu.h  g_network.cpp  g_object.cpp  g_particles.cpp  g_server.cpp  g_session.cpp  g_session.h  g_tank.cpp  g_usercmd.cpp  g_usercmd.h  g_world.cpp  g_world.h  gl_main.cpp  gl_main.h  keys.h  local.h  models.h  net_chan.cpp  net_main.cpp  net_main.h  net_msg.cpp  net_sock.cpp  oed_error.h  oed_files.h  oed_mem.h  oed_shared.h  oed_tools.h  oed_types.h  p_collide.cpp  (+32 more)
SOUND/: CMakeLists.txt  snd_channel.cpp  snd_device.cpp  snd_device.h  snd_dsound.cpp  snd_dsound.h  snd_files.h  snd_main.cpp  snd_main.h  snd_mix.cpp  snd_wav_cache.cpp  snd_wav_cache.h  snd_wav_reader.cpp  snd_wav_resource.cpp  snd_wav_resource.h  snd_wav_source.cpp  snd_wav_source.h  snd_wav_stream.cpp  snd_wav_stream.h
game/: g_aicontroller.cpp  g_aicontroller.h  g_button.cpp  g_character.cpp  g_character.h  g_client.cpp  g_handle.h  g_handle.natvis  g_menu.cpp  g_menu.h  g_module.cpp  g_module.h  g_network.cpp  g_object.cpp  g_object.h  g_particles.cpp  g_projectile.cpp  g_projectile.h  g_server.cpp  g_session.cpp  g_session.h  g_shield.cpp  g_shield.h  g_ship.cpp  g_ship.h  g_subsystem.cpp  g_subsystem.h  g_tank.cpp  g_tank.h  g_weapon.cpp  g_weapon.h  g_world.cpp  g_world.h
network/: CMakeLists.txt  net_address.cpp  net_address.h  net_channel.cpp  net_channel.h  net_main.h  net_message.cpp  net_message.h  net_socket.cpp  net_socket.h
physics/: CMakeLists.txt  p_collide.cpp  p_collide.h  p_compound.cpp  p_compound.h  p_material.h  p_motion.cpp  p_motion.h  p_rigidbody.cpp  p_rigidbody.h  p_shape.cpp  p_shape.h  p_trace.cpp  p_trace.h  p_world.cpp  p_world.h
render/: r_draw.cpp  r_font.cpp  r_image.cpp  r_main.cpp  r_main.h  r_model.cpp  r_model.h  r_particle.h  r_window.cpp  r_window.h
shared/: CMakeLists.txt  cm_bounds.h  cm_color.h  cm_config.cpp  cm_config.h  cm_console.cpp  cm_console.h  cm_error.h  cm_filesystem.cpp  cm_filesystem.h  cm_geometry.h  cm_keys.h  cm_matrix.h  cm_parser.cpp  cm_parser.h  cm_random.h  cm_shared.cpp  cm_shared.h  cm_sound.h  cm_string.cpp  cm_string.h  cm_time.h  cm_variable.cpp  cm_vector.h  cm_visualize.h  oed_error.h  oed_files.h  oed_mem.h  oed_shared.cpp  oed_shared.h  oed_tools.h  oed_types.h  shared.h  shared.natvis
sound/: CMakeLists.txt  snd_channel.cpp  snd_device.cpp  snd_device.h  snd_dsound.cpp  snd_dsound.h  snd_files.h  snd_main.cpp  snd_main.h  snd_mix.cpp  snd_wav_cache.cpp  snd_wav_cache.h  snd_wav_reader.cpp  snd_wav_resource.cpp  snd_wav_resource.h  snd_wav_source.cpp  snd_wav_source.h  snd_wav_stream.cpp  snd_wav_stream.h
system/: keys.h  resource.h  win_include.h  win_main.cpp  win_main.h
unused/: tank.cpp
